# AI-Native-Student-Execution-OS-Reloaded

./: .gitignore  CONTRIBUTING.md  QuickStarterGuide.md  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 49e0c0fad544_initial_schema.py
backend/app/: dependencies.py  main.py
backend/app/api/schemas/: agents.py  analytics.py  auth.py  calendar.py  career.py  goal.py  knowledge.py  planning.py  profile.py
backend/app/api/v1/: agents.py  analytics.py  auth.py  calendar.py  career.py  documents.py  goals.py  health.py  (+5 more)
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py
backend/app/models/: agent_message.py  calendar.py  document.py  execution_metric.py  flashcard.py  goal.py  opportunity.py  recommendation.py  reflection.py  resume.py  student_profile.py  study_block.py  task.py  user.py
backend/app/repositories/: calendar_repository.py  goal_repository.py  profile_repository.py  user_repository.py
backend/app/services/: agent_orchestrator_service.py  agents.py  analytics_service.py  auth_service.py  calendar_service.py  document_parsing_service.py  interview_simulator_service.py  knowledge_extraction_service.py  opportunity_service.py  recommendation_service.py  reflection_service.py  resume_service.py  study_planner_service.py  task_prioritization_service.py  vector_db_service.py  workload_balancer_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py
(+62 files in other folders)
