[project]
name = "ai-student-os-backend"
version = "0.1.0"
description = "AI-Native Student Execution OS - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "PyJWT>=2.10.0",
    "pwdlib[argon2]>=0.2.0",
    "redis[hiredis]>=5.2.0",
    "google-genai>=2.6.0",
    "structlog>=24.4.0",
    "asgi-correlation-id>=4.3.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "resend>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "ARG", "PTH"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
